--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "cookie-session": "^2.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.18.1",
     "passport": "^0.6.0",
-    "passport-google-oauth20": "^2.0.0",
-    "cookie-session": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0"
   }
 }
