--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.18.2",
     "express-session": "^1.18.1",
     "google-auth-library": "^10.1.0",
+    "jsonwebtoken": "^9.0.2",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0"
   }
